--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -18,9 +18,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
       <!-- Begin Jekyll SEO tag v2.6.1 -->
-      <title>Education | Jacob Celestine</title>
+      <title>Experience | Jacob Celestine</title>
       <meta name="generator" content="Jekyll v3.8.6" />
-      <meta property="og:title" content="Education" />
+      <meta property="og:title" content="Experience" />
       <meta name="author" content="Jacob Celestine" />
       <meta property="og:locale" content="en" />
       <meta name="description" content="Big Data Engineer by day; Android developer by night. I like to keep myself updated with everything tech. Serial binge watcher whose first love is food!" />
@@ -31,7 +31,7 @@
       <meta property="og:image" content="http://localhost:4000/assets/img/blog/hydejack-8.png" />
       <meta name="google-site-verification" content="google1f23435b8b4b0519.html" />
       <script type="application/ld+json">
-         {"author":{"@type":"Person","name":"Jacob Celestine"},"url":"http://localhost:4000/","sameAs":["https://stackoverflow.com/users/7122438/jacob-celestine","https://github.com/jacobceles"],"image":"http://localhost:4000/assets/img/blog/hydejack-8.png","headline":"Education","description":"Big Data Engineer by day; Android developer by night. I like to keep myself updated with everything tech. Serial binge watcher whose first love is food!","@type":"WebSite","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://localhost:4000/assets/icons/icon.png"},"name":"Jacob Celestine"},"name":"Jacob Celestine","@context":"https://schema.org"}
+         {"author":{"@type":"Person","name":"Jacob Celestine"},"url":"http://localhost:4000/","sameAs":["https://stackoverflow.com/users/7122438/jacob-celestine","https://github.com/jacobceles"],"image":"http://localhost:4000/assets/img/blog/hydejack-8.png","headline":"Experience","description":"Big Data Engineer by day; Android developer by night. I like to keep myself updated with everything tech. Serial binge watcher whose first love is food!","@type":"WebSite","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://localhost:4000/assets/icons/icon.png"},"name":"Jacob Celestine"},"name":"Jacob Celestine","@context":"https://schema.org"}
       </script>
       <!-- End Jekyll SEO tag -->
       <meta name="mobile-web-app-capable" content="yes">
@@ -133,10 +133,10 @@
                         <li>
                            <a
                               id="_navigation"
-                              href="/education/"
+                              href="/experience/"
                               class="sidebar-nav-item"
                               >
-                           Education
+                           Experience
                            </a>
                         </li>
                      </ul>
