--- a/_layouts/education_skills.html
+++ b/_layouts/education_skills.html
@@ -138,6 +138,15 @@
                               >
                            Education & Skills
                            </a>
+                           <li>
+                           <a
+                              id="_navigation"
+                              href="/experience/"
+                              class="sidebar-nav-item"
+                              >
+                           Experience
+                           </a>
+                        </li>
                         </li>
                      </ul>
                   </nav>
