--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -133,6 +133,15 @@
                         <li>
                            <a
                               id="_navigation"
+                              href="/education_skills/"
+                              class="sidebar-nav-item"
+                              >
+                           Education & Skills
+                           </a>
+                        </li>
+                        <li>
+                           <a
+                              id="_navigation"
                               href="/experience/"
                               class="sidebar-nav-item"
                               >
