--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,4 +1,4 @@
-// You can add CSS rules here that will be inlucded in Hydejack's CSS file
+//You can add CSS rules here that will be inlucded in Hydejack's CSS file
 body {
 	--code-font-family: Menlo,Monaco,Consolas,monospace;
 	--font-weight: 400;
@@ -1709,4 +1709,467 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .heading {
     }
 }
 
+// Projects
+.project.card {
+  border-radius: 15px;
+  text-decoration: none !important;
+  margin: 10px auto;
 
+  .card-img-top {
+    border-radius: 15px 15px 0 0;
+  }
+
+  transition: transform 400ms;
+
+  &:hover:not(.post) {
+    transform: translateY(-8px);
+    box-shadow: -2px 8px 40px -12px rgba(0, 0, 0, 0.24);
+  }
+
+  h6 {
+        color: #74808a;
+        clear: both;
+        font-weight: 500;
+        margin: 0 0 15px 0;
+  }
+}
+
+.card {
+	-ms-flex-direction: column;
+	background-clip: border-box;
+	background-color: #fff;
+	border: 1px solid rgba(0,0,0,.125);
+	border-radius: .25rem;
+	display: -ms-flexbox;
+	display: flex;
+	flex-direction: column;
+	min-width: 0;
+	position: relative;
+	word-wrap: break-word;
+}
+.card>hr {
+	margin-left: 0;
+	margin-right: 0;
+}
+.card>.list-group:first-child .list-group-item:first-child {
+	border-top-left-radius: .25rem;
+	border-top-right-radius: .25rem;
+}
+.card>.list-group:last-child .list-group-item:last-child {
+	border-bottom-left-radius: .25rem;
+	border-bottom-right-radius: .25rem;
+}
+.card-body {
+	-ms-flex: 1 1 auto;
+	flex: 1 1 auto;
+	min-height: 1px;
+	padding: 1.25rem;
+}
+.card-title {
+	margin-bottom: .75rem;
+	margin-top: 0rem;
+}
+.card-subtitle {
+	margin-bottom: 0;
+	margin-top: -.375rem;
+}
+.card-text:last-child {
+	margin-bottom: 0;
+}
+.card-link:hover {
+	text-decoration: none;
+}
+.card-link+.card-link {
+	margin-left: 1.25rem;
+}
+.card-header {
+	background-color: rgba(0,0,0,.03);
+	border-bottom: 1px solid rgba(0,0,0,.125);
+	margin-bottom: 0;
+	padding: .75rem 1.25rem;
+}
+.card-header:first-child {
+	border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
+}
+.card-header+.list-group .list-group-item:first-child {
+	border-top: 0;
+}
+.card-footer {
+	background-color: rgba(0,0,0,.03);
+	border-top: 1px solid rgba(0,0,0,.125);
+	padding: .75rem 1.25rem;
+}
+.card-footer:last-child {
+	border-radius: 0 0 calc(.25rem - 1px) calc(.25rem - 1px);
+}
+.card-header-tabs {
+	border-bottom: 0;
+	margin-bottom: -.75rem;
+	margin-left: -.625rem;
+	margin-right: -.625rem;
+}
+.card-header-pills {
+	margin-left: -.625rem;
+	margin-right: -.625rem;
+}
+.card-img-overlay {
+	bottom: 0;
+	left: 0;
+	padding: 1.25rem;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+.card-img, .card-img-bottom, .card-img-top {
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	width: 100%;
+}
+.card-img, .card-img-top {
+	border-top-left-radius: calc(.25rem - 1px);
+	border-top-right-radius: calc(.25rem - 1px);
+}
+.card-img, .card-img-bottom {
+	border-bottom-left-radius: calc(.25rem - 1px);
+	border-bottom-right-radius: calc(.25rem - 1px);
+}
+.card-deck .card {
+	margin-bottom: 15px;
+}
+@media (min-width:576px) {
+	.card-deck {
+		-ms-flex-flow: row wrap;
+		display: -ms-flexbox;
+		display: flex;
+		flex-flow: row wrap;
+		margin-left: -15px;
+		margin-right: -15px;
+	}
+	.card-deck .card {
+		-ms-flex: 1 0 0%;
+		flex: 1 0 0%;
+		margin-bottom: 0;
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+}
+.card-group>.card {
+	margin-bottom: 15px;
+}
+@media (min-width:576px) {
+	.card-group {
+		-ms-flex-flow: row wrap;
+		display: -ms-flexbox;
+		display: flex;
+		flex-flow: row wrap;
+	}
+	.card-group>.card {
+		-ms-flex: 1 0 0%;
+		flex: 1 0 0%;
+		margin-bottom: 0;
+	}
+	.card-group>.card+.card {
+		border-left: 0;
+		margin-left: 0;
+	}
+	.card-group>.card:not(:last-child) {
+		border-bottom-right-radius: 0;
+		border-top-right-radius: 0;
+	}
+	.card-group>.card:not(:last-child) .card-header, .card-group>.card:not(:last-child) .card-img-top {
+		border-top-right-radius: 0;
+	}
+	.card-group>.card:not(:last-child) .card-footer, .card-group>.card:not(:last-child) .card-img-bottom {
+		border-bottom-right-radius: 0;
+	}
+	.card-group>.card:not(:first-child) {
+		border-bottom-left-radius: 0;
+		border-top-left-radius: 0;
+	}
+	.card-group>.card:not(:first-child) .card-header, .card-group>.card:not(:first-child) .card-img-top {
+		border-top-left-radius: 0;
+	}
+	.card-group>.card:not(:first-child) .card-footer, .card-group>.card:not(:first-child) .card-img-bottom {
+		border-bottom-left-radius: 0;
+	}
+}
+.card-columns .card {
+	margin-bottom: .75rem;
+}
+@media (min-width:576px) {
+	.card-columns {
+		-moz-column-count: 3;
+		-moz-column-gap: 1.25rem;
+		-webkit-column-count: 3;
+		-webkit-column-gap: 1.25rem;
+		column-count: 3;
+		column-gap: 1.25rem;
+		orphans: 1;
+		widows: 1;
+	}
+	.card-columns .card {
+		display: inline-block;
+		width: 100%;
+	}
+}
+.accordion>.card {
+	overflow: hidden;
+}
+.accordion>.card:not(:last-of-type) {
+	border-bottom: 0;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+.accordion>.card:not(:first-of-type) {
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+.accordion>.card>.card-header {
+	border-radius: 0;
+	margin-bottom: -1px;
+}
+.badge {
+	border-radius: .25rem;
+	display: inline-block;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	padding: .25em .4em;
+	text-align: center;
+	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	vertical-align: baseline;
+	white-space: nowrap;
+}
+@media (prefers-reduced-motion:reduce) {
+	.badge {
+		transition: none;
+	}
+}
+a.badge:focus, a.badge:hover {
+	text-decoration: none;
+}
+.badge:empty {
+	display: none;
+}
+.btn .badge {
+	position: relative;
+	top: -1px;
+}
+.badge-pill {
+	border-radius: 10rem;
+	padding-left: .6em;
+	padding-right: .6em;
+}
+.badge-primary {
+	background-color: #007bff;
+	color: #fff;
+}
+a.badge-primary:focus, a.badge-primary:hover {
+	background-color: #0062cc;
+	color: #fff;
+}
+a.badge-primary.focus, a.badge-primary:focus {
+	box-shadow: 0 0 0 .2rem rgba(0,123,255,.5);
+	outline: 0;
+}
+.badge-secondary {
+	background-color: #6c757d;
+	color: #fff;
+}
+a.badge-secondary:focus, a.badge-secondary:hover {
+	background-color: #545b62;
+	color: #fff;
+}
+a.badge-secondary.focus, a.badge-secondary:focus {
+	box-shadow: 0 0 0 .2rem rgba(108,117,125,.5);
+	outline: 0;
+}
+.badge-success {
+	background-color: #28a745;
+	color: #fff;
+}
+a.badge-success:focus, a.badge-success:hover {
+	background-color: #1e7e34;
+	color: #fff;
+}
+a.badge-success.focus, a.badge-success:focus {
+	box-shadow: 0 0 0 .2rem rgba(40,167,69,.5);
+	outline: 0;
+}
+.badge-info {
+	background-color: #17a2b8;
+	color: #fff;
+}
+a.badge-info:focus, a.badge-info:hover {
+	background-color: #117a8b;
+	color: #fff;
+}
+a.badge-info.focus, a.badge-info:focus {
+	box-shadow: 0 0 0 .2rem rgba(23,162,184,.5);
+	outline: 0;
+}
+.badge-warning {
+	background-color: #ffc107;
+	color: #212529;
+}
+a.badge-warning:focus, a.badge-warning:hover {
+	background-color: #d39e00;
+	color: #212529;
+}
+a.badge-warning.focus, a.badge-warning:focus {
+	box-shadow: 0 0 0 .2rem rgba(255,193,7,.5);
+	outline: 0;
+}
+.badge-danger {
+	background-color: #dc3545;
+	color: #fff;
+}
+a.badge-danger:focus, a.badge-danger:hover {
+	background-color: #bd2130;
+	color: #fff;
+}
+a.badge-danger.focus, a.badge-danger:focus {
+	box-shadow: 0 0 0 .2rem rgba(220,53,69,.5);
+	outline: 0;
+}
+.badge-light {
+	background-color: #f8f9fa;
+	color: #212529;
+}
+a.badge-light:focus, a.badge-light:hover {
+	background-color: #dae0e5;
+	color: #212529;
+}
+a.badge-light.focus, a.badge-light:focus {
+	box-shadow: 0 0 0 .2rem rgba(248,249,250,.5);
+	outline: 0;
+}
+.badge-dark {
+	background-color: #343a40;
+	color: #fff;
+}
+a.badge-dark:focus, a.badge-dark:hover {
+	background-color: #1d2124;
+	color: #fff;
+}
+a.badge-dark.focus, a.badge-dark:focus {
+	box-shadow: 0 0 0 .2rem rgba(52,58,64,.5);
+	outline: 0;
+}
+.jumbotron {
+	background-color: #e9ecef;
+	border-radius: .3rem;
+	margin-bottom: 2rem;
+	padding: 2rem 1rem;
+}
+@media (min-width:576px) {
+	.jumbotron {
+		padding: 4rem 2rem;
+	}
+}
+.jumbotron-fluid {
+	border-radius: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+.text-primary {
+	color: #007bff!important;
+}
+a.text-primary:focus, a.text-primary:hover {
+	color: #0056b3!important;
+}
+.text-secondary {
+	color: #6c757d!important;
+}
+a.text-secondary:focus, a.text-secondary:hover {
+	color: #494f54!important;
+}
+.text-success {
+	color: #28a745!important;
+}
+a.text-success:focus, a.text-success:hover {
+	color: #19692c!important;
+}
+.text-info {
+	color: #17a2b8!important;
+}
+a.text-info:focus, a.text-info:hover {
+	color: #0f6674!important;
+}
+.text-warning {
+	color: #ffc107!important;
+}
+a.text-warning:focus, a.text-warning:hover {
+	color: #ba8b00!important;
+}
+.text-danger {
+	color: #dc3545!important;
+}
+a.text-danger:focus, a.text-danger:hover {
+	color: #a71d2a!important;
+}
+.text-light {
+	color: #f8f9fa!important;
+}
+a.text-light:focus, a.text-light:hover {
+	color: #cbd3da!important;
+}
+.text-dark {
+	color: #343a40!important;
+}
+a.text-dark:focus, a.text-dark:hover {
+	color: #121416!important;
+}
+.text-body {
+	color: #212529!important;
+}
+.text-muted {
+	color: #6c757d!important;
+}
+.text-black-50 {
+	color: rgba(0,0,0,.5)!important;
+}
+.text-white-50 {
+	color: rgba(255,255,255,.5)!important;
+}
+.text-hide {
+	background-color: transparent;
+	border: 0;
+	color: transparent;
+	font: 0/0 a;
+	text-shadow: none;
+}
+.text-decoration-none {
+	text-decoration: none!important;
+}
+.text-break {
+	overflow-wrap: break-word!important;
+	word-break: break-word!important;
+}
+.text-reset {
+	color: inherit!important;
+}
+.border {
+	border: 1px solid #dee2e6!important;
+}
+.border-primary {
+	border-color: #007bff!important;
+}
+.ml-1, .mx-1 {
+	margin-left: .25rem!important;
+}
+.card-img-top {
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	width: 100%;
+}
+.card-img-top {
+	border-top-left-radius: calc(.25rem - 1px);
+	border-top-right-radius: calc(.25rem - 1px);
+}
+.card-group>.card:not(:last-child) .card-header, .card-group>.card:not(:last-child) .card-img-top {
+		border-top-right-radius: 0;
+	}
+.card-group>.card:not(:first-child) .card-header, .card-group>.card:not(:first-child) .card-img-top {
+	border-top-left-radius: 0;
+}
