Added new category

--- a/_layouts/education_skills.html
+++ b/_layouts/education_skills.html
@@ -138,6 +138,7 @@
                               >
                            Education & Skills
                            </a>
+                        </li>
                            <li>
                            <a
                               id="_navigation"
@@ -147,6 +148,14 @@
                            Experience
                            </a>
                         </li>
+                        <li>
+                           <a
+                              id="_navigation"
+                              href="/projects/"
+                              class="sidebar-nav-item"
+                              >
+                           Works
+                           </a>
                         </li>
                      </ul>
                   </nav>
