--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -148,6 +148,15 @@
                            Experience
                            </a>
                         </li>
+                        <li>
+                           <a
+                              id="_navigation"
+                              href="/projects/"
+                              class="sidebar-nav-item"
+                              >
+                           Works
+                           </a>
+                        </li>
                      </ul>
                   </nav>
                   <div class="sidebar-social">
