--- a/_layouts/education_skills.html
+++ b/_layouts/education_skills.html
@@ -139,7 +139,7 @@
                            Education & Skills
                            </a>
                         </li>
-                           <li>
+                        <li>
                            <a
                               id="_navigation"
                               href="/experience/"
@@ -209,7 +209,7 @@
             >
             <article class="page" role="article">
                <header>
-                  <h1 class="page-title">Education & Skills</h1>
+                  <h1 class="page-title">Education</h1>
                   <div class="hr pb0"></div>
                </header>
                <div class="education-block">
@@ -225,27 +225,25 @@
                <br><br>
                <h1 class="page-title">Skills</h1>
                <div class="hr pb0"></div>
-               <div id="skills">
-                  <ul>
-                     <li>Python</li>
-                     <li>PySpark</li>
-                     <li>Hive</li>
-                     <li>Hadoop</li>
-                     <li>Airflow</li>
-                     <li>Tableau</li>
-                     <li>R Studio</li>
-                     <li>Machine Learning</li>
-                     <li>HTML</li>
-                     <li>PHP</li>
-                     <li>MySQL</li>
-                     <li>Firebase</li>
-                     <li>Java (Android)</li>
-                     <li>JIRA</li>
-                     <li>Git</li>
-                     <li>Jenkins</li>
-                     <li>AWS</li>
-                  </ul>
-               </div>
+                  <div class="skill-body">
+                     {% assign rows = site.data.skills.size | divided_by: 2.0 | ceil %}
+                     {% for i in (1..rows) %}
+                     {% assign offset = forloop.index0 | times: 2 %}
+                     <div class="row">
+                        {% for skill in site.data.skills limit:2 offset:offset %}
+                        <div class="col-md-6">
+                           <div class="progress-container progress-primary">
+                              <span class="progress-badge">{{ skill.name }}</span>
+                              <div class="progress">
+                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{ skill.level }}"></div>
+                                 <span class="progress-value">{{ skill.level }}</span>
+                              </div>
+                           </div>
+                        </div>
+                        {% endfor %}
+                     </div>
+                     {% endfor %}
+                  </div>
             </article>
             <footer role="contentinfo">
                <hr/>
