--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,3 +1,3 @@
-{% comment %}
-<meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *;">
-{% endcomment %}
+{% comment %}<!--
+Use this add elements to the <body/> of the document.
+-->{% endcomment %}
