--- a/thanos/css/custom.css
+++ b/thanos/css/custom.css
@@ -837,7 +837,35 @@
   content: '\25BE';
 }
 
-/* Drop down */
+/* Form */
+#cover {
+    background: #222 url('https://unsplash.it/1920/1080/?random') center center no-repeat;
+    background-size: cover;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+#cover-caption {
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+/* Form background overlay */
+form:before {
+    content: '';
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: -1;
+    border-radius: 10px;
+}
 
 
 
