Added writers Provided placeholders Removed descriptions Updated css

--- a/thanos/css/custom.css
+++ b/thanos/css/custom.css
@@ -868,5 +868,18 @@ form:before {
     border-radius: 10px;
 }
 
+/* Required Fields */
+.jsonform-required > label:after {
+  content: ' *';
+  color: red;
+}
+
+.jsonform-hasrequired:after {
+  content: '* Required field';
+  display: block;
+  color: red;
+  padding-top: 1em;
+}
+
 
 
