Updated experience and education

--- a/_layouts/education_skills.html
+++ b/_layouts/education_skills.html
@@ -224,6 +224,11 @@
                   <span class="education-date">June 2011 - Mar 2013</span>
                   <h4>Higher Secondary, Mathematics and Computer Science</h4>
                </div>
+               <div class="education-block">
+                  <h3>Rutgers University</h3>
+                  <span class="education-date">Jan 2021 - Present</span>
+                  <h4>Master of Science in Computer Science</h4>
+               </div>
                <br><br>
                <h1 class="page-title">Skills</h1>
                <div class="hr pb0"></div>
