Updated education and work experience

--- a/_layouts/education_skills.html
+++ b/_layouts/education_skills.html
@@ -216,7 +216,7 @@
                </header>
                <div class="education-block">
                   <h3>Rutgers University</h3>
-                  <span class="education-date">Jan 2021 - Present</span>
+                  <span class="education-date">Jan 2021 - Jan 2022</span>
                   <h4>Master of Science in Computer Science</h4>
                </div>
                <div class="education-block">
